Correction version mobile

--- a/src/components/APropos/FAQ.scss
+++ b/src/components/APropos/FAQ.scss
@@ -6,4 +6,9 @@
     flex-direction: column;
     gap: 20px;
     padding-bottom: 2rem;
+
+    @media (max-width: 1240px) {
+        margin: 20px;
+        width: auto;
+    }
 }
