--- a/src/components/FicheLogement/LogementInfos.scss
+++ b/src/components/FicheLogement/LogementInfos.scss
@@ -5,27 +5,49 @@
     margin: 3rem auto;
     font-family: $main-family;
 
+    @media (max-width: 767px) {
+        margin: 1rem 20px;
+    }
+
     .upper-infos {
         display: flex;
         justify-content: space-between;
         margin-bottom: 2rem;
+
+        @media (max-width: 767px) {
+            flex-direction: column;
+            gap: 0.5rem;
+            margin-bottom: 1rem;
+        }
 
         .left {
             display: flex;
             flex-direction: column;
             gap: 1rem;
 
+            @media (max-width: 767px) {
+                gap: 0.5rem;
+            }
+
             .title {
                 font-size: 36px;
                 font-weight: 500;
                 color: $main-color;
                 margin-block: 0;
+
+                @media (max-width: 767px) {
+                    font-size: 18px;
+                }
             }
 
             .location {
                 font-size: 18px;
                 font-weight: 500;
                 margin-block: 0 0.5rem;
+
+                @media (max-width: 767px) {
+                    font-size: 14px;
+                }
             }
         }
 
@@ -34,10 +56,19 @@
             flex-direction: column;
             justify-content: space-between;
 
+            @media (max-width: 767px) {
+                flex-direction: row;
+                align-items: center;
+            }
+
             .host-infos {
                 display: flex;
                 align-items: center;
                 gap: 1rem;
+
+                @media (max-width: 767px) {
+                    order: 2;
+                }
 
                 .name {
                     color: $main-color;
@@ -45,12 +76,22 @@
                     font-weight: 500;
                     max-width: 95px;
                     text-align: right;
+
+                    @media (max-width: 767px) {
+                        font-size: 12px;
+                        max-width: 75px;
+                    }
                 }
 
                 .picture {
                     border-radius: 100%;
                     width: 64px;
                     height: 64px;
+
+                    @media (max-width: 767px) {
+                        width: 32px;
+                        height: 32px;
+                    }
                 }
             }
         }
@@ -69,12 +110,22 @@
                 font-size: 14px;
                 font-weight: 700;
                 color: #fff;
+
+                @media (max-width: 767px) {
+                    font-size: 10px;
+                    border-radius: 10px;
+                }
             }
         }
     }
     .collapses-container {
         display: flex;
         gap: 4rem;
+        
+        @media (max-width: 767px) {
+            flex-direction: column;
+            gap: 1.5rem;
+        }
 
         .collapse {
             flex: 1;
