--- a/src/components/FicheLogement/Slideshow.scss
+++ b/src/components/FicheLogement/Slideshow.scss
@@ -9,6 +9,7 @@
 
     @media (max-width: 767px) {
         height: 255px;
+        margin: 0 20px;
     }
 
     .arrow {
