--- a/src/components/Layout/Header.scss
+++ b/src/components/Layout/Header.scss
@@ -10,6 +10,7 @@ header {
 
     @media (max-width: 1240px) {
         margin: 20px;
+        width: auto;
     }
 
     .links-container {
