--- a/src/components/reusables/Collapse.scss
+++ b/src/components/reusables/Collapse.scss
@@ -16,7 +16,8 @@
         transition: all 0.5s ease-out;
 
         @media (max-width: 767px) {
-            font-size: 14px;
+            font-size: 13px;
+            padding: 7px 15px;
         }
 
         &.open {
